# Don_Topo_Engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-release.bat  build.bat  configure-release.bat  configure.bat  imgui.ini
Scripts/: AudioFade.lua  AudioTest.lua  DeleteGameObject.lua  Mover.lua  PushMe.lua  README.md  Rotator.lua  Test.lua  TriggerProbe.lua  TriggerTest.lua  a.lua  movef.lua
assets/: legacy_usegravity.json  model.fbx  warnings_repetidos.json
assets/animatedCharacter/: standing idle 01.fbx  standing run back.fbx  standing run forward stop.fbx  standing run forward.fbx  standing run left.fbx  standing run right.fbx  standing turn 90 left.fbx  standing turn 90 right.fbx  standing walk back.fbx  standing walk forward.fbx  standing walk left.fbx  standing walk right.fbx
cmake/: CopyIfMissing.cmake  FindFMOD.cmake  Lua.cmake  PatchImGuiNodeEditor.cmake  PhysX.cmake
docs/superpowers/plans/: 2026-06-20-repo-setup.md  2026-07-01-skeletal-animation.md  2026-07-02-pbr.md  2026-07-04-cube-primitive.md  2026-07-04-sphere-primitive.md  2026-07-05-physx-box-collider.md  2026-07-05-physx-rigidbody-demo.md  2026-07-05-rigidbody-editor-sync.md  2026-07-06-boxcollider-component.md  2026-07-06-sphere-capsule-plane-collider.md  2026-07-07-basic-shapes-creation.md  2026-07-07-gizmos.md  2026-07-07-selection-axes-gizmo.md  2026-07-07-window-icon.md  2026-07-08-audioclip-component.md  2026-07-08-camera-focus-selected.md  2026-07-09-collider-gizmos.md  2026-07-09-content-browser-rename-delete.md  2026-07-09-wireframe-mode.md  2026-07-10-play-mode.md  2026-07-10-scene-serialization.md  2026-07-10-scene.md  2026-07-11-log-console-value-editing.md  2026-07-11-log-console.md  2026-07-12-log-console-component-remove.md  2026-07-12-lua-scripting.md  2026-07-13-panel-visibility-menu.md  2026-07-13-script-editor-diagnostics-autocomplete.md  2026-07-13-script-editor-panel.md  2026-07-14-editor-panel-split.md  2026-07-14-engine-module-restructure.md  2026-07-14-undo-redo.md  2026-07-15-rigidbody-component.md  2026-07-16-animator-graph.md  2026-07-16-camera-component.md  2026-07-16-content-browser-folder-tree.md  2026-07-18-animator-int-float-params.md  2026-07-19-animator-auto-skinned-import.md  2026-07-19-animator-multi-fbx-clips.md  2026-07-21-export-game.md  (+2 more)
docs/superpowers/specs/: 2026-06-20-repo-setup-design.md  2026-07-01-skeletal-animation-design.md  2026-07-02-pbr-design.md  2026-07-03-fmod-audio-design.md  2026-07-03-renderer-refactor-design.md  2026-07-04-cube-primitive-design.md  2026-07-07-gizmos-design.md  (+37 more)
engine/: CMakeLists.txt
engine/include/DonTopo/: AudioClipComponent.h  AudioManager.h  BoxCollider.h  Camera.h  Capsule.h  CapsuleCollider.h  Command.h  EditorUI.h  Engine.h  FileManager.h  GameObject.h  Gizmos.h  GpuDevice.h  LuaSyntaxCheck.h  Material.h  Mesh.h  ModelLoader.h  PhysicsManager.h  PlaneCollider.h  Renderer.h  RigidBody.h  Scene.h  SceneNode.h  ScriptEditorPanel.h  ScriptManager.h  SkinnedMesh.h  Skybox.h  UndoManager.h  UniformBufferObject.h  Vertex.h  Window.h
engine/include/DonTopo/Audio/: AudioClipComponent.h  AudioManager.h
engine/include/DonTopo/Core/: AnimatorComponent.h  CameraComponent.h  GameObject.h  Input.h  Scene.h  Window.h
engine/include/DonTopo/Editor/: AnimatorPanel.h  Command.h  ContentBrowserPanel.h  EditorContext.h  EditorUI.h  GameExporter.h  Gizmos.h  LogPanel.h  PropertiesPanel.h  ScenePanel.h  ScriptEditorPanel.h  UndoManager.h  ViewportPanel.h
engine/include/DonTopo/Files/: FileManager.h
engine/include/DonTopo/Physics/: PhysicsManager.h  Rigidbody.h
engine/include/DonTopo/Physics/Colliders/: BoxCollider.h  CapsuleCollider.h  Collider.h  PlaneCollider.h  SphereCollider.h
engine/include/DonTopo/Renderer/: Capsule.h  Cube.h  GpuResources.h  Mesh.h  ModelLoader.h  Plane.h  Renderer.h  SkinnedMesh.h  SkinnedMeshAnimations.h  SkinnedMeshPacking.h  Sphere.h  SplashScreen.h  Vertex.h
engine/include/DonTopo/Scripting/: LuaApiReference.h  ScriptBindings.h  ScriptComponent.h  ScriptManager.h
engine/src/: AudioClipComponent.cpp  AudioManager.cpp  BoxCollider.cpp  Camera.cpp  Capsule.cpp  CapsuleCollider.cpp  Command.cpp  Cube.cpp  EditorUI.cpp  Engine.cpp  FileManager.cpp  GameObject.cpp  Gizmos.cpp  GpuDevice.cpp  GpuResources.cpp  Input.cpp  LuaApiReference.cpp  ModelLoader.cpp  PhysicsManager.cpp  Plane.cpp  PlaneCollider.cpp  Renderer.cpp  RigidBody.cpp  Scene.cpp  SceneNode.cpp  ScriptBindings.cpp  ScriptComponent.cpp  ScriptEditorPanel.cpp  ScriptManager.cpp  Skybox.cpp  Sphere.cpp  SphereCollider.cpp  UndoManager.cpp  Window.cpp
engine/src/Audio/: AudioClipComponent.cpp  AudioManager.cpp
engine/src/Core/: AnimatorComponent.cpp  Camera.cpp  CameraComponent.cpp  Engine.cpp  GameObject.cpp  Input.cpp  Scene.cpp  Window.cpp
engine/src/Editor/: AnimatorPanel.cpp  Command.cpp  ContentBrowserPanel.cpp  EditorUI.cpp  GameExporter.cpp  Gizmos.cpp  LogPanel.cpp  PropertiesPanel.cpp  ScenePanel.cpp  ScriptEditorPanel.cpp  UndoManager.cpp  ViewportPanel.cpp
engine/src/Files/: FileManager.cpp
engine/src/Physics/: PhysicsManager.cpp  Rigidbody.cpp
engine/src/Physics/Colliders/: BoxCollider.cpp  CapsuleCollider.cpp  Collider.cpp  PlaneCollider.cpp  SphereCollider.cpp
engine/src/Renderer/: Capsule.cpp  Cube.cpp  GpuDevice.cpp  GpuResources.cpp  ModelLoader.cpp  Plane.cpp  Renderer.cpp  SkinnedMeshAnimations.cpp  SkinnedMeshPacking.cpp  Skybox.cpp  Sphere.cpp  SplashScreen.cpp
engine/src/Scripting/: LuaApiReference.cpp  LuaSyntaxCheck.cpp  ScriptBindings.cpp  ScriptComponent.cpp  ScriptManager.cpp
engine/tests/: CMakeLists.txt  animator_tests.cpp  audio_tests.cpp  camera_tests.cpp  content_browser_tests.cpp  exporter_tests.cpp  physics_tests.cpp  scripting_tests.cpp  splash_tests.cpp
runtime/: CMakeLists.txt  SplashDriver.h  main.cpp
sandbox/: CMakeLists.txt  Sandbox.rc
sandbox/src/: main.cpp
shaders/: bone_eval.comp  bone_hierarchy.comp  gizmo.vert  pbr.frag  shadow.vert  skinning.comp  skybox.frag  skybox.vert  splash.frag  splash.vert  triangle.frag  triangle.vert  wireframe.frag
